<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_new_subscription"
    tools:context=".account_settings.AccountSettingsActivity">

    <ImageView
        android:id="@+id/imageViewAvatar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/choose_photo"
        app:layout_constraintBottom_toTopOf="@+id/editTextName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonYouTube"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewTwitter"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_twitter"
        app:layout_constraintBottom_toTopOf="@+id/imageViewInstagram"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewYouTube"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_youtube"
        app:layout_constraintBottom_toTopOf="@+id/imageViewTwitter"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonYouTube"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@android:color/white"
        android:background="@drawable/background_button_youtube"
        android:text="@string/find_in_youtube"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewYouTube"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewYouTube"
        app:layout_constraintTop_toTopOf="@+id/imageViewYouTube" />

    <ImageView
        android:id="@+id/imageViewInstagram"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_instagram"
        app:layout_constraintBottom_toTopOf="@+id/buttonCreate"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonTwitter"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@android:color/white"
        android:background="@drawable/background_button_twitter"
        android:text="@string/find_in_twitter"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewTwitter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewTwitter"
        app:layout_constraintTop_toTopOf="@+id/imageViewTwitter" />

    <Button
        android:id="@+id/buttonInstagram"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@android:color/white"
        android:background="@drawable/background_button_instagram"
        android:text="@string/find_in_instagram"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewInstagram"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewInstagram"
        app:layout_constraintTop_toTopOf="@+id/imageViewInstagram" />

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@android:color/white"
        android:background="@drawable/side_nav_bar"
        android:text="@string/create_new_subscription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/spin_kit"
        style="@style/SpinKitView.WanderingCubes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        app:SpinKit_Color="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/buttonCreate"
        app:layout_constraintEnd_toEndOf="@+id/buttonCreate"
        app:layout_constraintTop_toTopOf="@+id/buttonCreate" />
</android.support.constraint.ConstraintLayout>